local storage attempts

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -15,12 +15,16 @@
     <button id="create-petition">Create Petition</button>
 
     <h3>Current Docket Info : <span id='pagetitle'>Docket counts should display here...</span></h3>
-    <p>Count: <span id='countNum'></span></p>
-    <p>Docket #: <span id='docket'></span></p>
-    <p>Statute: <span id='offenseStatute'></span></p>
-    <p>Offense Status: <span id='offenseStatus'></span></p>
-    <p>Last Docket Entry: <span id='date'></span></p>
+    <hr>
+    <p><b>Count:</b> <span id='countNum'></span></p>
+    <p><b>Docket #:</b> <span id='docket'></span></p>
+    <p><b>Statute:</b> <span id='offenseStatute'></span></p>
+    <p><b>Offense Status:</b> <span id='offenseStatus'></span></p>
+    <p><b>Last Docket Entry:</b> <span id='date'></span></p>
 
+
+    <button id="reset-docket-info">Reset Docket Info</button>
+    <div id=ls></div>
     <script id='script' src="popup.js"></script>
 </body>
 
