Data persistence working
Just had to host the iframe instead of loading it from the file system so that it keeps its localstorage
- I used surge.sh to quickly host the iframe but we should probably set up a task runner to listen for changes to make development easier
- I played around with using the "storage" event listener to listen for changes so that the form page wouldn't require refresehes for updates but I didn't get that working in this commit

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -27,6 +27,7 @@
         <div id=ls></div>
 
     </div>
+    <iframe src="http://boundless-edge.surge.sh/" height="200px" width="200px" id="iframe"></iframe>
     <script id='script' src="popup.js"></script>
 </body>
 
