Add npm scripts, express, live-reload, & index.js
With this commit, devs should now run npm install and npm start

--- a/formMenu/index.html
+++ b/formMenu/index.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <div>
-      <p>form goes here!</p>
+      <p>form</p>
       <div id="destination"></div>
     </div>
   </body>
-    <iframe src="http://boundless-edge.surge.sh/" height="200px" width="200px" id="iframe"></iframe>
-  <script src="formPage.js"></script>
+    <iframe src="http://localhost:3000/iframe" height="200px" width="200px" id="iframe"></iframe>
+    <script src="formPage.js"></script>
+    <script src="http://localhost:9090"></script>
 </html>
