--- a/iframe/index.html
+++ b/iframe/index.html
@@ -6,9 +6,10 @@
   </head>
   <body>
     <div>
-      <p>Hello world two!</p>
+      <p>iframe</p>
       <div id="results"></div>
     </div>
   </body>
   <script src="iframe.js"></script>
+    <script src="http://localhost:9090"></script>
 </html>
