Move in-page CSS definitions to separate CSS file based on feedback in pull request #24
- applied body class to page for targeting.

Issue #17

--- a/extensionDirectory/formMenu.html
+++ b/extensionDirectory/formMenu.html
@@ -5,19 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Expunge VT - Document Generator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-      .make-me-sticky {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        padding: 0 15px;
-      }
-      .custom-control-input:disabled~.custom-control-label {
-        text-decoration: line-through;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/expunge.css">
   </head>
-  <body class="bg-light">
+  <body class="bg-light expunge-form-menu">
     <div class="container">
 
       <div class="py-2 text-center">
