Button and styling for "add new count" button to use for creating additional counts not populated by the scraper.
Issue #17

--- a/extensionDirectory/formMenu.html
+++ b/extensionDirectory/formMenu.html
@@ -65,37 +65,40 @@
             <hr class="mb-4" style="border-width: 0">
 
             <div class="card mb-4">
-                <div class="card-header">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="include-count-1" value="1">
-                    <label class="custom-control-label" for="include-count-1">Count 1</label>
+              <div class="card-header">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="include-count-1" value="1">
+                  <label class="custom-control-label" for="include-count-1">Count 1</label>
+                </div>
+              </div>
+              <div class="card-body">
+                  <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <label for="inputStatute">Statue</label>
+                          <input type="text" class="form-control" id="inputStatute">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="inputType">Type</label>
+                          <input type="text" class="form-control" id="inputType">
+                      </div>
                   </div>
-                </div>
-                <div class="card-body">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputStatute">Statue</label>
-                            <input type="text" class="form-control" id="inputStatute">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputType">Type</label>
-                            <input type="text" class="form-control" id="inputType">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputDescription">Description</label>
-                            <input type="text" class="form-control" id="inputDescription">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputStatus">Status</label>
-                            <input type="text" class="form-control" id="inputStatus">
-                        </div>
-                    </div>
-                </div>
-              </div> <!-- / card -->
-              
+                  <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <label for="inputDescription">Description</label>
+                          <input type="text" class="form-control" id="inputDescription">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label for="inputStatus">Status</label>
+                          <input type="text" class="form-control" id="inputStatus">
+                      </div>
+                  </div>
+              </div>
+            </div> <!-- / card -->
 
+            <div class="py-2 text-center">
+                <button type="button" class="btn btn-success btn-md">+ New Count</button>
+            </div>
+              
           </div> <!-- / col-8 -->
           <div class="col-4">
             <div class="make-me-sticky">
