initial updates and commenting

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -13,11 +13,13 @@
 
 <body>
     <div id="docketInfo">
-        <h3>Vermont Superior Court<span id='pagetitle'>Docket counts should display here...</span></h3>
-        <p><b>Docket #:</b> <span id='pagetitle'></span></p>
+        <h3><span id='pagetitle'>Name should display here...</span></h3>
+        <p><b>DOB:</b> <span id='defendantDOB'></span></p>
         <hr>
+        <p><b>Docket #:</b> <span id='docket'></span></p>
         <p><b>Count:</b> <span id='countNum'></span></p>
         <p><b>Statute:</b> <span id='offenseStatute'></span></p>
+        <p><b>Felony/Misd.:</b> <span id='offenseClass'></span></p>
         <p><b>Disposition:</b> <span id='offenseStatus'></span></p>
         <p><b>Disposition Date:</b> <span id='date'></span></p>
 
