--- a/extensionDirectory/formMenu.html
+++ b/extensionDirectory/formMenu.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/expunge.css">
   </head>
   <body class="bg-light expunge-form-menu">
+      <div id="destination">N/A</div>
     <div class="container">
 
       <div class="py-2 text-center">
