add address to parsing function

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -24,6 +24,7 @@
         <div id="defendantInfo">
             <p><b>Petitioner:</b> <span id='defendantName'></span></p>
             <p><b>DOB:</b> <span id='defendantDOB'></span></p>
+            <p><b>Address:</b> <span id='defendantAddress'></span></p>
         </div>
         <div id="logoDiv">
             <img src="http://www.codeforbtv.org/sites/default/files/code-for-btv-blue_300.png" alt="Home" class="logos">
