small changes - fixed errors, created clear button, ensured popup works on all extension pages

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -45,8 +45,10 @@
             <button id="expunge-it" class="expunge-it btn btn-success">ExC</button>
             <button id="expunge-it" class="expunge-it btn btn-success">ExNC</button>
             <button id="expunge-it" class="expunge-it btn btn-success">SealC</button>
+            
         </div>
         <button id="create-petition" class="btn btn-success">Petition Management</button>
+        <button id="clear-data" class="expunge-it btn btn-danger">Clear</button>
         <br>
     </div>
     <script id='script' src="popup.js"></script>
