Additonal form layout work

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -36,12 +36,13 @@
     <table>
        <tbody>
          <tr><td>
-                       <div class="document-meta-data no-print">
-                <h2>Petition To Expunge Conviction</h2>
-                <p>Chittenden, 2 Counts</p>
-            </div>
+
         <article class="page">
-        
+            <div class="document-meta-data no-print">
+                <h2 class="document-meta-data__title">Petition To Expunge Conviction</h2>
+                <p class="document-meta-data__body">Chittenden, 2 Counts</p>
+            </div>
+
         <div class="container form__container">
             <div class="header">
                 <div class="header__title">State Of Vermont</div>
@@ -106,7 +107,10 @@
 
 
     <article class="page">
-
+            <div class="document-meta-data no-print">
+                <h2 class="document-meta-data__title">Petition To Expunge Conviction</h2>
+                <p class="document-meta-data__body">Addison, 1 Count</p>
+            </div>
         <div class="container form__container">
             <div class="header">
                 <div class="header__title">State Of Vermont</div>
